ADAPT-530: Fixed glitch for underline on red banner button. (#71)
* ADAPT-530: Fixed glitch for underline on red banner button.

* ADAPT-530: Fixing span so not cut off at the top of text.

--- a/src/scss/theme/banners/_banner-in-page--no-image.scss
+++ b/src/scss/theme/banners/_banner-in-page--no-image.scss
@@ -60,6 +60,7 @@
           // small text / superheading field
           span {
             @include saa-modular-typography-small;
+            padding-top: 1px; // fixes letters getting cut off
           }
 
           span,
@@ -83,8 +84,7 @@
           //}
 
           // regular links and action links
-          a:not(.su-button):not(.su-button--secondary):not(.su-button--big),
-          .su-link {
+          a:not(.su-button):not(.su-button--secondary):not(.su-button--big) {
             margin-top: 12px;
             color: $su-color-white;
 
